<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/desc_txt"
      android:layout_width="200dip"
        android:layout_height="40dip"
        android:layout_marginTop="30dip"
        android:background="#ffffff"
        android:textColor="#456174"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:text="@string/desc" />



    <Button
        android:id="@+id/movie_bt"
        style="@style/portfolio_facade"
        android:layout_below="@id/desc_txt"
        android:text="@string/movie" />
    <Button
        android:id="@+id/stock_bt"
        style="@style/portfolio_facade"
        android:layout_below="@id/movie_bt"
        android:text="@string/stock" />
    <Button
        android:id="@+id/build_bt"
        style="@style/portfolio_facade"
        android:layout_below="@id/stock_bt"
        android:text="@string/build" />
    <Button
        android:id="@+id/material_bt"
        style="@style/portfolio_facade"
        android:layout_below="@id/build_bt"
        android:text="@string/material" />
    <Button
        android:id="@+id/ubiquitous_bt"
        style="@style/portfolio_facade"
        android:layout_below="@id/material_bt"
        android:text="@string/ubiquitous" />
    <Button
        android:id="@+id/capstone_bt"
        style="@style/portfolio_facade"
        android:layout_below="@id/ubiquitous_bt"
        android:text="@string/capstone" />

</RelativeLayout>
